Indicate support for Java 1.19.2